--- a/.gitignore
+++ b/.gitignore
@@ -566,3 +566,4 @@ FodyWeavers.xsd
 *.tlog
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,visualstudio,visualstudiocode,cmake,c,c++
+third_party/drogon_backup/
